create home page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#" class="logo">Car<span>Point</span></a>
         <!--Nav List-->
         <ul class="navbar">
-          <li><a href="#home">Home</a></li>
+          <li><a href="#home" class="active">Home</a></li>
           <li><a href="#cars">Cars</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#parts">Parts</a></li>
@@ -31,9 +31,64 @@
         <!--Search Icon-->
         <i class="bx bx-search" id="search-icon"></i>
         <!--Search Box-->
-        <input type="search" name="" id="" placeholder="Search here..." />
+        <div class="search-box container">
+          <input type="search" name="" id="" placeholder="Search here..." />
+        </div>
       </div>
     </header>
+
+    <section class="home" id="home">
+      <div class="home-text">
+        <h1>We Have Everything <br />Your <span>Car</span> Need</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur <br />adipisicing elit.
+          Tempora, at.
+        </p>
+        <!--Home Button-->
+        <a href="#" class="btn">Discover Now</a>
+      </div>
+    </section>
+    <section class="cars" id="cars">
+      <div class="heading">
+        <span>All Cars</span>
+        <h2>We have all types cars</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, soluta.
+        </p>
+      </div>
+      <div class="cars-container container">
+        <!-- Box 1 -->
+        <div class="box">
+          <img src="img/car1.jpg" alt="" />
+          <h2>Porche Car</h2>
+        </div>
+        <!-- Box 2 -->
+        <div class="box">
+          <img src="img/car2.jpg" alt="" />
+          <h2>Porche Car</h2>
+        </div>
+        <!-- Box 3 -->
+        <div class="box">
+          <img src="img/car3.jpg" alt="" />
+          <h2>Porche Car</h2>
+        </div>
+        <!-- Box 4 -->
+        <div class="box">
+          <img src="img/car4.jpg" alt="" />
+          <h2>Porche Car</h2>
+        </div>
+        <!-- Box 5 -->
+        <div class="box">
+          <img src="img/car5.jpg" alt="" />
+          <h2>Porche Car</h2>
+        </div>
+        <!-- Box 6 -->
+        <div class="box">
+          <img src="img/car6.jpg" alt="" />
+          <h2>Porche Car</h2>
+        </div>
+      </div>
+    </section>
 
     <script src="main.js"></script>
   </body>
