--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
         <div class="footer-box">
           <h3>Page</h3>
           <a href="#">Home</a>
-          <a href="#">Cars</a>
-          <a href="#">Parts</a>
+          <a href="#cars">Cars</a>
+          <a href="#parts">Parts</a>
           <a href="#">Sales</a>
         </div>
         <div class="footer-box">
